--- a/apophis/package.json
+++ b/apophis/package.json
@@ -7,16 +7,25 @@
   },
   "dependencies": {
     "aws-sdk": "^2.820.0",
-    "cookie-parser": "~1.4.4",
+    "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "~1.9.1",
+    "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-apple": "^1.1.1",
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-kakao": "^1.0.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0"
   }
